--- a/package.json
+++ b/package.json
@@ -27,18 +27,12 @@
     },
     "homepage": "https://github.com/vmashnitskaya/rslang#readme",
     "dependencies": {
-        "@material-ui/core": "^4.11.0",
-        "@material-ui/icons": "^4.9.1",
-        "@material-ui/lab": "^4.0.0-alpha.56",
-        "@material-ui/styles": "^4.10.0",
-        "chart.js": "^2.9.3",
         "clsx": "^1.1.1",
         "core-js": "^3.6.5",
-        "cross-fetch": "^3.0.5",
-        "nuka-carousel": "^4.7.0",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-media-player": "^0.7.9",
         "regenerator-runtime": "^0.13.5",
         "segoe-fonts": "^1.0.1"
     },
