--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,8 @@
         "jsx-a11y/no-static-element-interactions": "off",
         "jsx-a11y/click-events-have-key-events": "off",
         "jsx-a11y/no-noninteractive-element-interactions": "off",
+        "no-named-as-default-member": "off",
+        "no-named-as-default": "off",
         "no-shadow": "off",
         "no-find-dom-node": "off",
         "prettier/prettier": [
